--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,26 @@
 @charset 'UTF-8';
+
 html {
   scroll-behavior: smooth;
-  background-color: rgb(173, 132, 102);
-  font-size: 90%
+  font-size: 90%;
 }
+#app {
+  padding-top: 25%;
+  min-height: 100vh;
+  background-color: rgb(173, 132, 102);
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
 body {
   margin: 0 auto;
   width: 100%;
+  min-height: 100vh;
+  text-align: center;
 }
 li {
   list-style: none;
@@ -19,12 +33,11 @@ a {
 img {
   max-width: 100%;
   height: auto;
-  vertical-align: top;
+  vertical-align: middle;
 }
 .footer_nav {
   display: flex;
   align-items: flex-end;
-  bottom: 0;
 }
 .footer_nav h1 {
   width: -webkit-fill-available;
@@ -33,13 +46,35 @@ img {
 li {
   list-style: none;
 }
+header {
+  width: 100%;
+}
 .footer {
   width: 100%;
   display: flex;
   justify-content: space-around;
   position: absolute;
   bottom: 0;
-  padding: 0%;
+}
+#food_page {
+  background-color: antiquewhite;
+  min-height: 100vh;
+}
+.food_img {
+  width: 200px;
+}
+.food_ttl {
+  padding-top: 10px;
+  color: rgb(92, 23, 23);
+
+}
+.food_txt {
+  line-height: 2;
+  word-break: keep-all;
+}
+.txt_ttl {
+  color: rgb(92, 23, 23);
+  padding-bottom: 10px;
 }
 
 
