--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,4 @@
 @charset 'UTF-8';
-
 html {
   scroll-behavior: smooth;
   font-size: 90%;
@@ -9,13 +8,14 @@ html {
   min-height: 100vh;
   background-color: rgb(173, 132, 102);
 }
-
+#list {
+  background-color: rgb(208, 182, 157);
+}
 @media (min-width: 768px) {
   html {
     font-size: 87.5%;
   }
 }
-
 body {
   margin: 0 auto;
   width: 100%;
