--- a/public/style.css
+++ b/public/style.css
@@ -77,5 +77,33 @@ header {
   color: rgb(92, 23, 23);
   padding-bottom: 10px;
 }
+/* @media (min-width: 576px) {
+  #app1 {
+    max-width: 540px;
+  }
+} */
+/*タブレット 〜 */
+@media (min-width: 768px) {
+  #app1, #list {
+    max-height: 720px;
+  }
+}
+/*PC 〜 */
+@media (min-width: 992px) {
+  #app1 {
+    height: 100%;
+  }
+}
+/*PC大 〜 */
+@media (min-width: 1200px) {
+  #app1 {
+    height: 100%;
+  }
+}
 
-
+/* @media (min-width: 768px) {
+  #footer {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+} */
