--- a/public/style.css
+++ b/public/style.css
@@ -81,6 +81,7 @@ header {
   border: 1px solid rgb(84, 60, 60);
   font-size: 17px;
   color: bisque;
+  height: 160px;
 }
 .food_img {
   width: 100px;
@@ -92,7 +93,7 @@ header {
   }
   .food_list_li {
     height: 260px;
-    line-height: 5;
+    line-height: 6;
   }  
 }
 /*タブレット 〜 */
