--- a/public/style.css
+++ b/public/style.css
@@ -7,8 +7,8 @@ html {
   font-size: 1.4rem;
 }
 #app {
-  padding-top: 25%;
-  min-height: 100vh;
+  padding-top: 30px;
+  height: 100vh;
   background-color: rgb(173, 132, 102);
 }
 #list {
