--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@ html {
 }
 #app {
   padding-top: 30px;
-  height: 100vh;
+  /* height: 100vh; */
   background-color: rgb(173, 132, 102);
 }
 #list {
