--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,8 @@ html {
 }
 #app {
   padding-top: 30px;
-  /* height: 100vh; */
+  height: 100vh;
+  /* height: 100%; */
   background-color: rgb(173, 132, 102);
 }
 #list {
@@ -17,6 +18,7 @@ html {
 }
 #app1 {
   text-align: center;
+  background-color: rgb(173, 132, 102);
 }
 li {
   list-style: none;
@@ -50,7 +52,7 @@ header {
   display: flex;
   justify-content: space-around;
   position: absolute;
-  bottom: 0;
+  /* bottom: 0; */
 }
 #food_page {
   background-color: antiquewhite;
