--- a/public/style.css
+++ b/public/style.css
@@ -8,9 +8,10 @@ html {
 }
 #app {
   padding-top: 30px;
-  height: 100vh;
+  min-height: 100vh;
   /* height: 100%; */
   background-color: rgb(173, 132, 102);
+  position: relative;
 }
 #list {
   background-color: rgb(208, 182, 157);
@@ -52,7 +53,7 @@ header {
   display: flex;
   justify-content: space-around;
   position: absolute;
-  /* bottom: 0; */
+  bottom: 0;
 }
 #food_page {
   background-color: antiquewhite;
