--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,8 @@ html {
 #app1 {
   text-align: center;
   background-color: rgb(173, 132, 102);
+  position: relative;
+  min-height: 100vh;
 }
 li {
   list-style: none;
