--- a/public/style.css
+++ b/public/style.css
@@ -80,7 +80,7 @@ header {
 .food_list {
   display: flex;
   align-items: center;
-  height: 25%;
+  height: 22%;
   /* border: 1px solid rgb(84, 60, 60); */
 
 }
@@ -91,6 +91,7 @@ header {
   font-size: 17px;
   color: bisque;
   /* line-height: 2.5; */
+  padding-top: 30px;
 }
 .food_img {
   width: 100px;
