--- a/public/style.css
+++ b/public/style.css
@@ -63,12 +63,24 @@ header {
   min-height: 100vh;
 }
 .food_img {
-  width: 200px;
+  animation: key .3s ease infinite alternate;
+}
+@keyframes key {
+  0% {transform: translateY(0px);}
+  100% {transform: translateY(-10px);}
 }
 .food_ttl {
   padding-top: 100px;
   color: rgb(92, 23, 23);
 
+}
+.text__bound {
+  animation: key .3s ease infinite alternate;
+  font-size: 50px;
+}
+@keyframes key {
+  0% {transform: translateY(0px);}
+  100% {transform: translateY(-10px);}
 }
 .food_txt {
   line-height: 2;
