--- a/public/style.css
+++ b/public/style.css
@@ -58,7 +58,7 @@ header {
   bottom: 0;
 }
 #food_page {
-  background-color: antiquewhite;
+  background-color: rgb(173, 132, 102);
   min-height: 100vh;
 }
 .food_img {
