--- a/public/style.css
+++ b/public/style.css
@@ -3,9 +3,9 @@ html {
   scroll-behavior: smooth;
   font-size: 62.5%;
 }
-* {
+/* * {
   font-size: 1.4rem;
-}
+} */
 #app {
   padding-top: 80px;
   height: 100vh;
