--- a/public/style.css
+++ b/public/style.css
@@ -62,6 +62,7 @@ header {
 #food_page {
   background-color: rgb(173, 132, 102);
   min-height: 100vh;
+  font-size: 20px;
 }
 .food_img {
   animation: key .3s ease infinite alternate;
