--- a/public/style.css
+++ b/public/style.css
@@ -146,9 +146,9 @@ header {
     height: 6rem;
     font-size: 20px;
   }  
-  #app1 {
+  /* #app1 {
     min-height: 100vh;
-  }
+  } */
 }
 /*タブレット 〜 */
 @media (min-width: 768px) {
@@ -208,9 +208,6 @@ header {
 #app {
   padding-top: 30px;
 }
-/* #app1 {
-  min-height: 100vh;
-} */
 .nou {
   width: 300px;
 }
@@ -220,21 +217,15 @@ header {
 .food_list_li {
   width: auto;
 }
-/* tr {
+tr {
   height: auto;
   font-size: 10px;
-} */
+}
 #app2 {
   padding-top: 20px;
 }
 .mediayoko {
   gap: 0;
 }
-/* .result {
-  width: 200px;
-} */
-/* .redText {
-  width: 10px;
-} */
 }
 
